# luthiers-toolbox

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACTIONS_1_2_COMPLETE.md  ADAPTIVE_FEED_OVERRIDE_COMPLETE.md  ADAPTIVE_FEED_OVERRIDE_QUICKREF.md  AGENTS.md  AGENT_SESSION_BOOKMARK.md  AI Subsystem_Integration_Handoff_12162025.md  AI_Profile_Tuning_Handoff.md  AI_REFACTORING_SESSION_REPORT_DEC16.md  AI_SANDBOX_GOVERNANCE_v 2.0.md  AI_SCHEMA_NAMESPACE_REPORT.md  AMENDED WAVE PLAN.md  API_HEALTH_SMOKE_COMPLETE.md  ARCHITECTURAL_EVOLUTION.md  ARCHITECTURE.md  ARCHITECTURE_DECISION_NODE_SCOPE.md  ARCHTOP_LEGACY_DISCOVERY_SUMMARY.md  ART_STUDIO_BUNDLE5_BACKEND_COMPLETE.md  ART_STUDIO_CHECKPOINT_EVALUATION.md  ART_STUDIO_COMPLETE_INTEGRATION.md  ART_STUDIO_COMPLETE_VERIFICATION.md  ART_STUDIO_REPO_SUMMARY.md  ART_STUDIO_V16_0_INTEGRATION_COMPLETE.md  ART_STUDIO_V16_0_QUICKREF.md  ART_STUDIO_V16_1_INTEGRATION_STATUS.md  A_N_BUILD_ROADMAP.md  Agentic AI as Quality Voter_A Self-Validating Vectorization System.md  Agentic Approach for Accurate Photo Vectorization.md  Answer Back for GitHub.md  Art Studio Drift Audit.md  Art_Studio_Developer Onboarding Guide.md  B19_CLONE_AS_PRESET_INTEGRATION.md  B21_MULTI_RUN_COMPARISON_COMPLETE.md  B21_MULTI_RUN_COMPARISON_QUICKREF.md  B21_ROUTE_REGISTRATION_GUIDE.md  BADGE_SYSTEM_DEPLOYMENT_SUMMARY.md  BATCH_EXPORT_SUMMARY.md  (+437 more)
services/api/: .dockerignore  DEVELOPER_HANDOFF_ROUTE_REDUCTION_PHASE2.md  Dockerfile  Makefile  None  RMOS_AI_MIGRATION_COMPLETE.md  ROUTE_AUDIT_PHASE2_RESULTS.md  __init__.py  _explore_rosette.py  alembic.ini  design_rosette.py  fix_imports.py  gen_smart_guitar_v3.py  noxfile.py  pyproject.toml  pytest.ini  railway.json  requirements-ai.txt  requirements-dev.txt  requirements.txt  start_server.bat  test_ai_integration.py  test_arch_patch.py  test_data_load.py  test_n14_fix.py  test_new_routes.py  test_novel_designs.py  test_parser_fixes.py  test_registry_phase1.py  test_registry_phase2.py  test_rmos_integration.py  test_wave_e1.py  verify_n11_schema.py
services/api/app/: ROUTER_CONSOLIDATION_MAP.md  ROUTER_SAFETY_AUDIT.md  art_studio_rosette_store.py  create_sample_runs.py  main.py  post_injection_dropin.py  post_injection_helpers.py  router_registry.py  saw_lab_run_service.py  test_dalle_advisory.py
services/api/data/: art_jobs.json  art_presets.json  cam_job_favorites.json  cam_job_log.jsonl  cam_risk_reports.jsonl  sample_rpm_specs.csv  sample_saw_blades.json  smart_guitar_combined.dxf  smart_guitar_corrected.dxf  smart_guitar_v2_complete.dxf  (+3 more)
tap_tone_pi-main (5)/tap_tone_pi-main/: .gitignore  .pre-commit-config.yaml  CBSP21.md  CHANGELOG.md  CODEOWNERS  CONSOLIDATION_PROGRESS.md  CONTRIBUTING.md  Critical Design Review_tap-tone-pi.md  DEV_HANDOFF.md  FIRST_MEASUREMENT_CHECKLIST.md  GOLD_STANDARD_EXAMPLE_RUN.md  INSTRUMENT_SCOPE.md  Makefile  QUICKSTART.md  README.md  boundary_spec.json  engineer_handoff.md  executive_summary.md  generate_report.py  mypy.ini  pyproject.toml  requirements.txt  tap_tone_pi_design_review.md
(+5880 files in other folders)
