[project]
name = "luthiers-toolbox-api"
version = "2.0.0"
requires-python = ">=3.11,<3.14"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
exclude = ["data", "data.*", "metrics", "metrics.*", "test_support", "test_support.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
